# TNM046-theLab1

Lab1/GLprimer/: .clang-format  CMakeLists.txt  GLprimer.cpp  Rotator.cpp  Rotator.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TriangleSoup.cpp  TriangleSoup.hpp  Utilities.cpp  Utilities.hpp  fragment.glsl  vertex.glsl
Lab1/GLprimer/glew/: CMakeLists.txt
